started editing readme, fix gallery alignment, and established a footer; fixed css issues with about me and contact sections

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #353547;
+    background-color: #581845;
 }
 
 a{
@@ -37,7 +37,7 @@ header h1 {
     margin: 20px;
     border: 0 white;
     border-radius: 12px;
-    background-color: lightgray;
+    background-color: #708090;
     font-family: 'Montserrat', sans-serif;
     opacity: 1;
     transition: 0.3s;
@@ -52,6 +52,14 @@ main{
  margin-right: auto;
 }
 
+main h1{
+    color: white;
+    font-size: 35px;
+    padding-right: 50px;
+}
+.space, header{
+    margin-bottom: 100px;
+}
 section{
     display: flex;
     margin: 10px;
@@ -60,13 +68,15 @@ section .about-me-title img{
     max-height: 300px;
     min-height: 300px;
 }
+
 section .about-me-bio{
-    padding: 10px 15px; 
+    padding: 20px 25px; 
 }
 
 .projects {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .gallery{
@@ -74,7 +84,46 @@ section .about-me-bio{
     min-height: 250px;
     margin: 10px;
 }
-
-footer p{
-    flex
+.btn{
+    padding: 15px;
+    margin: 20px;
+    border: 0 white;
+    border-radius: 12px;
+    background-color: #6c4d59;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    opacity: 1;
+    transition: 0.3s;
 }
+
+.btn:hover{
+    opacity: 0.6;
+}
+
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 55px;
+}
+
+.footerthx p{
+    position: absolute;
+    text-align: center;
+    color: white;
+    padding: 35px;
+    margin-left: 0;
+    width: 100%;
+    background-color:#6c4d59;
+}
+
+/* 
+aboutmephoto{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
+*/
